Allow to define several VIPs

--- a/etc/keepalived/keepalived.conf
+++ b/etc/keepalived/keepalived.conf
@@ -58,8 +58,11 @@ vrrp_instance vip {
   # To be MASTER, make this 50 more than on other machines.
   priority {{ .PRIORITY | default 100 }}
 
+{{$vips := splitList "," .VIP }}
+{{$iface := .IFACE }}
   virtual_ipaddress {
-    {{.VIP}} dev {{.IFACE}}
+{{ range $key, $value := $vips}}  ¦ {{$value}} dev {{$iface}}
+{{ end }}
   }
 
   track_script {
