Strange char copied incorrectly

--- a/etc/keepalived/keepalived.conf
+++ b/etc/keepalived/keepalived.conf
@@ -61,7 +61,7 @@ vrrp_instance vip {
 {{$vips := splitList "," .VIP }}
 {{$iface := .IFACE }}
   virtual_ipaddress {
-{{ range $key, $value := $vips}}  ¦ {{$value}} dev {{$iface}}
+{{ range $key, $value := $vips}}    {{$value}} dev {{$iface}}
 {{ end }}
   }
 
